# gapi-helper

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
gapi_helper/common/: __init__.py  operations.py
gapi_helper/drive/: README.md  __init__.py  client.py  file.py  folder.py  operations.py
gapi_helper/mail/: README.md  __init__.py  client.py
gapi_helper/sheets/: README.md  __init__.py  client.py  operations.py  range.py  sheet.py  spreadsheet.py
gapi_helper/tasks/: README.md  __init__.py  cli.py  dumptask.py  importsheetsource.py  transfertask.py  types.py
sample/drive/: __init__.py  files.py  sharewith.py
sample/sheets/: __init__.py  backup.py
tests/common/: operations_test.py
tests/drive/: client_test.py  conftest.py  file_test.py  folder_test.py
tests/drive/data/: copyfile.json  discovery.json  findfile-text.json  findfile.json  listfolder1.json  listfolder2.json  listfolder3.json  sharefile.json  uploadfile.json
tests/sheets/: client_test.py  conftest.py  operations_test.py  range_test.py
tests/sheets/data/: bulkappend.json  bulkclean.json  bulkupdate.json  bulkwrite.json  discovery.json  get_values.json  limitreached.json  spreadsheet_info.json  unauthorized.json
tests/tasks/: transfertask_test.py
