[tool.black]
line_length = 110
target-version = ['py36']

[tool.poetry]
name = "gapi-helper"
version = "0.2.1"
description = "Helpers around Google APIs"
authors = ["Thomas Muguet <thomas.muguet@upowa.org>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/upOwa/gapi-helper"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Utilities",
    "Topic :: Database",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6.1"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
google-api-python-client = "^1.11.0"
oauth2client = "^4.1.3"
simpletasks-data = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.0"}
pytest-flake8 = "^1.0.6"
pytest-mypy = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
